# venedict-backend

./: .dockerignore  Dockerfile  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
src/: main.py  notebook.ipynb
src/agents/decision_duel/: agent.py  state.py
src/agents/decision_duel/bear/: node.py  prompt.py  tools.py
src/agents/decision_duel/bull/: node.py  prompt.py  tools.py
src/agents/decision_duel/referee/: node.py  prompt.py  tools.py
src/api/: db.py  main.py
