[project]
name = "llm-decision-duel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "standard>=1.0.3",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "langgraph-cli[inmem]>=0.4.11",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
